fix: fix tests for routes and models
